Project was refactored