@@ -1,16 +1,14 @@
 package michael.linker.gestureid.sensor.recognizer;
 
-import java.util.Collections;
-import java.util.HashMap;
 import java.util.Map;
 
+import michael.linker.gestureid.core.sensor.sensor.type.BaseSensorType;
+import michael.linker.gestureid.core.sensor.sensor.type.CompositeSensorType;
+import michael.linker.gestureid.core.sensor.sensor.type.SensorType;
 import michael.linker.gestureid.sensor.model.ASensorModel;
 import michael.linker.gestureid.sensor.model.base.AccelerometerSensorModel;
 import michael.linker.gestureid.sensor.model.base.GyroscopeSensorModel;
 import michael.linker.gestureid.sensor.model.base.MagneticFieldSensorModel;
-import michael.linker.gestureid.sensor.type.BaseSensorType;
-import michael.linker.gestureid.sensor.type.CompositeSensorType;
-import michael.linker.gestureid.sensor.type.SensorType;
 
 /**
  * Utility class that helps connect sensor types
@@ -20,34 +18,22 @@ public class SensorRecognizer {
     private static final Map<Integer, ASensorModel> TYPE_SENSOR_MODEL_MAP;
 
     static {
-        Map<Integer, SensorType> unmodifiableTypeMap = new HashMap<>();
-        // Base types
-        unmodifiableTypeMap.put(BaseSensorType.ACCELEROMETER.toInt(),
-                BaseSensorType.ACCELEROMETER);
-        unmodifiableTypeMap.put(BaseSensorType.GYROSCOPE.toInt(),
-                BaseSensorType.GYROSCOPE);
-        unmodifiableTypeMap.put(BaseSensorType.MAGNETOMETER.toInt(),
-                BaseSensorType.MAGNETOMETER);
-        // Composite types
-        unmodifiableTypeMap.put(CompositeSensorType.ROTATION_VECTOR .toInt(),
-                CompositeSensorType.ROTATION_VECTOR);
-        unmodifiableTypeMap.put(CompositeSensorType.GEOMAGNETIC_ROTATION_VECTOR.toInt(),
-                CompositeSensorType.GEOMAGNETIC_ROTATION_VECTOR);
-        unmodifiableTypeMap.put(CompositeSensorType.GRAVITY.toInt(),
-                CompositeSensorType.GRAVITY);
-        unmodifiableTypeMap.put(CompositeSensorType.LINEAR_ACCELERATION.toInt(),
-                CompositeSensorType.LINEAR_ACCELERATION);
-        SENSOR_TYPE_MAP = Collections.unmodifiableMap(unmodifiableTypeMap);
+        SENSOR_TYPE_MAP = Map.of(
+                // Base types
+                BaseSensorType.ACCELEROMETER.toInt(), BaseSensorType.ACCELEROMETER,
+                BaseSensorType.GYROSCOPE.toInt(), BaseSensorType.GYROSCOPE,
+                BaseSensorType.MAGNETOMETER.toInt(), BaseSensorType.MAGNETOMETER,
+                // Composite types
+                CompositeSensorType.ROTATION_VECTOR.toInt(), CompositeSensorType.ROTATION_VECTOR,
+                CompositeSensorType.GEOMAGNETIC_ROTATION_VECTOR.toInt(), CompositeSensorType.GEOMAGNETIC_ROTATION_VECTOR,
+                CompositeSensorType.GRAVITY.toInt(), CompositeSensorType.GRAVITY,
+                CompositeSensorType.LINEAR_ACCELERATION.toInt(), CompositeSensorType.LINEAR_ACCELERATION);
 
         // Models
-        Map<Integer, ASensorModel> unmodifiableModelMap = new HashMap<>();
-        unmodifiableModelMap.put(BaseSensorType.ACCELEROMETER.toInt(),
-                new AccelerometerSensorModel());
-        unmodifiableModelMap.put(BaseSensorType.GYROSCOPE.toInt(),
-                new GyroscopeSensorModel());
-        unmodifiableModelMap.put(BaseSensorType.MAGNETOMETER.toInt(),
-                new MagneticFieldSensorModel());
-        TYPE_SENSOR_MODEL_MAP = Collections.unmodifiableMap(unmodifiableModelMap);
+        TYPE_SENSOR_MODEL_MAP = Map.of(
+                BaseSensorType.ACCELEROMETER.toInt(), new AccelerometerSensorModel(),
+                BaseSensorType.GYROSCOPE.toInt(), new GyroscopeSensorModel(),
+                BaseSensorType.MAGNETOMETER.toInt(), new MagneticFieldSensorModel());
 
     }
 
@@ -61,7 +47,7 @@ public class SensorRecognizer {
     public static SensorType recognizeSensorById(final Integer typeId)
             throws SensorTypeRecognizerFailedException {
         SensorType sensorType = SENSOR_TYPE_MAP.get(typeId);
-        if(sensorType == null) {
+        if (sensorType == null) {
             throw new SensorTypeRecognizerFailedException("Sensor type can't be recognized!");
         }
         return sensorType;
